v0.5.0-Beta: balance overhaul